Added initial Vault validations

--- a/.vagrant/provisioners/ansible/inventory/group_vars/vault_servers/vault.yml
+++ b/.vagrant/provisioners/ansible/inventory/group_vars/vault_servers/vault.yml
@@ -10,6 +10,9 @@ hashi_vault_configuration:
         address: "{{ hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8200' }}"
         cluster_address: "{{ hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8201' }}"
         tls_disable: true
+    - tcp:
+        address: 127.0.0.1:8200
+        tls_disable: true
   storage:
     consul:
       address: 127.0.0.1:8500
