Fixes issue with connecting to Consul
The Consul service is not yet up at this point. So, we need to let handlers kick in

--- a/playbooks/app_servers.yml
+++ b/playbooks/app_servers.yml
@@ -19,6 +19,8 @@
         state: present
       become: true
 
+- hosts: app_servers
+  tasks:
     - name: Manage Consul Services
       consul:
         service_name: "{{ item.name }}"
