--- a/scenarios/consul_nginx_reverse_proxy.yml
+++ b/scenarios/consul_nginx_reverse_proxy.yml
@@ -61,111 +61,6 @@ nodes:
     vcpu: 1
     port_forwards: []
     windows: false
-  - name: consul02
-    ansible_groups:
-      - consul_servers
-    box: local/ubuntu1804
-    desktop: false
-    disable_synced_folders: false
-    disks: []
-    functional_hgfs: true
-    interfaces:
-      - ip: 192.168.250.12
-        auto_config: true
-        method: static
-    linked_clone: true
-    mem: 512
-    nested_virtualization: false
-    provision: true
-    provisioners: []
-    ssh_use_public_ip: false
-    vcpu: 1
-    port_forwards: []
-    windows: false
-  - name: consul03
-    ansible_groups:
-      - consul_servers
-    box: local/ubuntu1804
-    desktop: false
-    disable_synced_folders: false
-    disks: []
-    functional_hgfs: true
-    interfaces:
-      - ip: 192.168.250.13
-        auto_config: true
-        method: static
-    linked_clone: true
-    mem: 512
-    nested_virtualization: false
-    provision: true
-    provisioners: []
-    ssh_use_public_ip: false
-    vcpu: 1
-    port_forwards: []
-    windows: false
-  - name: vault01
-    ansible_groups:
-      - vault_servers
-    box: local/ubuntu1804
-    desktop: false
-    disable_synced_folders: false
-    disks: []
-    functional_hgfs: true
-    interfaces:
-      - ip: 192.168.250.21
-        auto_config: true
-        method: static
-    linked_clone: true
-    mem: 512
-    nested_virtualization: false
-    provision: true
-    provisioners: []
-    ssh_use_public_ip: false
-    vcpu: 1
-    port_forwards: []
-    windows: false
-  - name: vault02
-    ansible_groups:
-      - vault_servers
-    box: local/ubuntu1804
-    desktop: false
-    disable_synced_folders: false
-    disks: []
-    functional_hgfs: true
-    interfaces:
-      - ip: 192.168.250.22
-        auto_config: true
-        method: static
-    linked_clone: true
-    mem: 512
-    nested_virtualization: false
-    provision: true
-    provisioners: []
-    ssh_use_public_ip: false
-    vcpu: 1
-    port_forwards: []
-    windows: false
-  - name: vault03
-    ansible_groups:
-      - vault_servers
-    box: local/ubuntu1804
-    desktop: false
-    disable_synced_folders: false
-    disks: []
-    functional_hgfs: true
-    interfaces:
-      - ip: 192.168.250.23
-        auto_config: true
-        method: static
-    linked_clone: true
-    mem: 512
-    nested_virtualization: false
-    provision: true
-    provisioners: []
-    ssh_use_public_ip: false
-    vcpu: 1
-    port_forwards: []
-    windows: false
   - name: app01
     ansible_groups:
       - app_servers
@@ -231,7 +126,7 @@ nodes:
     windows: false
   - name: lb01
     ansible_groups:
-      - loadbalancers
+      - nginx_lbs
     box: local/ubuntu1804
     desktop: false
     disable_synced_folders: false
