--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,11 @@ jinja2==2.11.2            # via ansible, click-completion, cookiecutter, jinja2-
 joblib==0.16.0            # via nltk
 livereload==2.6.2         # via mkdocs
 lunr[languages]==0.5.8    # via mkdocs
-markdown==3.2.2           # via mkdocs
+markdown==3.2.2           # via mkdocs, mkdocs-material, pymdown-extensions
 markupsafe==1.1.1         # via cookiecutter, jinja2
-mkdocs==1.1.2             # via -r requirements.in
+mkdocs-material-extensions==1.0  # via mkdocs-material
+mkdocs-material==5.4.0    # via -r requirements.in, mkdocs-material-extensions
+mkdocs==1.1.2             # via -r requirements.in, mkdocs-material
 molecule==3.0.6           # via -r requirements.in
 monotonic==1.5            # via fasteners
 nltk==3.5                 # via lunr
@@ -42,6 +44,8 @@ pluggy==0.13.1            # via molecule
 poyo==0.5.0               # via cookiecutter
 ptyprocess==0.6.0         # via pexpect
 pycparser==2.20           # via cffi
+pygments==2.6.1           # via mkdocs-material
+pymdown-extensions==7.1   # via mkdocs-material
 pynacl==1.4.0             # via paramiko
 python-dateutil==2.8.1    # via arrow
 python-gilt==1.2.3        # via molecule
