--- a/.vagrant/provisioners/ansible/inventory/group_vars/vault_servers/vault.yml
+++ b/.vagrant/provisioners/ansible/inventory/group_vars/vault_servers/vault.yml
@@ -3,20 +3,15 @@
 # https://www.vaultproject.io/docs/configuration
 hashi_vault_configuration:
   api_addr: "{{ 'http://'+hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8200' }}"
-  cluster_addr: "{{ 'http://'+hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8201' }}"
   listener:
     # First address will always be used to define url
     - tcp:
-        address: "{{ hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8200' }}"
-        cluster_address: "{{ hostvars[inventory_hostname]['ansible_'+vault_bind_interface]['ipv4']['address']+':8201' }}"
-        tls_disable: true
-    - tcp:
         address: 127.0.0.1:8200
+        cluster_address: 127.0.0.1:8201
         tls_disable: true
   storage:
-    consul:
-      address: 127.0.0.1:8500
-      path: vault/
-      scheme: http
+    file:
+      path: /var/lib/vault
   ui: true
-hashi_vault_remain_unsealed: true
+
+hashi_vault_master: "{{ inventory_hostname }}"
