Fixed playbook failure for Consul/DNSMasq
Previous check for groups['vault_servers'] was wrong.

--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -9,7 +9,8 @@
 
 - import_playbook: consul_dnsmasq_systemd_resolved.yml
   when:
-    - inventory_hostname not in groups['vault_servers']
+    - groups['consul_servers'] is defined
+    - groups['consul_servers'] != []
 
 - import_playbook: vault.yml
 
